--- a/src/projects/socialmedia/Profiles/Profiles.css
+++ b/src/projects/socialmedia/Profiles/Profiles.css
@@ -1,21 +1,19 @@
-.MainGrid{
-display:grid;
-grid-template-columns:1fr 4fr;
-margin: 20px auto;
-border: 4px solid orange;
-width: fit-content;
-grid-gap:20px
+.MainGrid {
+  width: 100%;
+  max-width: 1300px;
+  height: 100vh;
+  padding-top: 80px;
+  top: 40px;
 
+  color: black;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+
+  margin: 0 auto;
 }
 
 .ConnectMain {
   background-color: white;
-  border: 3px solid crimson;
-  width: 40vw;
-  min-width: 450px;
-
-
-  transition: 1s ease-in-out;
 }
 
 .ConnectMain img {
@@ -57,7 +55,6 @@ grid-gap:20px
   font-size: 14px;
 }
 .RightUC {
-  min-width: 600px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -66,11 +63,9 @@ grid-gap:20px
   margin: 10px auto;
 }
 .UCList ul {
-  font-size: 16px;
-  max-width: 70%;
-  gap: 25px;
   list-style: none;
   display: flex;
+  gap: 10px;
   justify-content: space-evenly;
 
   align-items: center;
@@ -121,18 +116,119 @@ grid-gap:20px
   flex-direction: column;
   gap: 10px;
 }
-
+.newCM {
+  height: 900px;
+  width: 100%;
+  max-width: 800px;
+  overflow-x: hidden;
+  background: var(--color-primary-social);
+  border: 1px solid rgba(128, 128, 128, 0.637);
+}
 /* Filter bar */
-.filterBar{
-  height:900px;
-  width:100%;
-  background:#203864;
+.filterBar {
+  height: 900px;
+  width: 100%;
+  max-width: 300px;
+  border: 1px solid rgba(128, 128, 128, 0.568);
+  background: white;
+}
+.filter-upper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border: 1px solid grey;
+}
+.fb-options {
+  height: 500px;
+}
+.fb-options > div {
+  margin-top: 10px;
+}
+.fb-header {
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  background-color: var(--color-primary-social);
+  color: white;
+}
+.fb-Option {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 0 10px;
+  align-items: center;
+  margin: 5px auto;
+}
+/*filter switches*/
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 45px;
+  height: 17px;
 }
 
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
 
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
 
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 13px;
+  width: 13px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
 
 @media only screen and (max-width: 768px) {
+  .MainGrid {
+    grid-template-columns: 1fr;
+  }
+  .filterBar {
+    display: none;
+  }
   .MainContainer {
     grid-template-columns: 1fr;
   }
