--- a/src/projects/socialmedia/Nav/NavTop/NavTop.css
+++ b/src/projects/socialmedia/Nav/NavTop/NavTop.css
@@ -143,7 +143,9 @@ a {
   width: 100%;
 
   display: flex;
+  justify-content: space-between;
   gap: 15px;
+  align-items: center;
   padding: 10px 15px;
   cursor: pointer;
 }
