--- a/src/projects/socialmedia/Nav/NavTop/NavTop.css
+++ b/src/projects/socialmedia/Nav/NavTop/NavTop.css
@@ -160,6 +160,7 @@ a {
 .notification-details {
   display: grid;
   gap: 5px;
+  width: 100%;
 }
 @media screen and (max-width: 1224px) {
   .social-nav-top h5 {
