--- a/src/projects/socialmedia/Profiles/Profiles.css
+++ b/src/projects/socialmedia/Profiles/Profiles.css
@@ -1,273 +1,23 @@
-.MainGrid {
-  position: sticky;
-  width: 100%;
-  max-width: 1300px;
-  height: 100vh;
-  overflow-y: scroll;
-  padding-top: 80px;
-  top: 0px;
-
-  color: black;
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  gap: 10px;
-  margin: 0 auto;
+.friendsSearch {
+  border: 1px solid crimson;
 }
-.newCM {
-  height: 830px;
-
-  width: 100%;
-  max-width: 900px;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  border: 1px solid rgba(128, 128, 128, 0.637);
-}
-.ConnectMain {
-  background-color: white;
+.content.friendsSearch {
+  top: 80px;
+  width: 40vw;
+  left: calc(50vw + 5vw);
 }
 
-.ConnectMain img {
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
-}
-
-.UpperConnect {
-  background-color: var(--color-primary-social);
-  display: grid;
-  grid-template-columns: 2fr 3fr;
-  width: 100%;
-  height: 100px;
-  align-items: center;
-}
-.LeftUC {
-  display: grid;
-  text-align: left;
-}
-.LUCtitle {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.UCSearch {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 5px;
-  margin: 0 5px;
-  margin-left: 10px;
-}
-.UCSearch input {
-  min-width: 10rem;
-  width: 100%;
-  height: 3rem;
-  border: 2px solid rgba(128, 128, 128, 0.568);
-  padding: 3px 10px;
-  border-radius: 5px;
-  font-size: 14px;
-}
-.RightUC {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.UCList {
-  margin: 10px auto;
-}
-.UCList ul {
-  list-style: none;
-  display: flex;
-  gap: 10px;
-  justify-content: space-evenly;
-
-  align-items: center;
-}
-.UCList li {
-  cursor: pointer;
-}
-
-.LowerConnect {
-  display: grid;
-  height: 720px;
-  overflow-y: scroll;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-  margin: 5px auto;
-  padding: 0 10px;
-}
-.CProfile {
-  /* border: 1px solid rgba(128, 128, 128, 0.466);
-  border-radius: 10px; */
-  display: flex;
-
-  justify-content: space-evenly;
-  align-items: center;
-  height: 300px;
-  padding: 0 5px;
-}
-.PSelected {
-  border: 1px solid #2038649f;
-  border-radius: 10px;
-}
-
-.CProfile img {
-  width: 90px;
-  height: 90px;
-}
-.tag {
-  border-radius: 5px;
-  padding: 5px 2px;
-  cursor: pointer;
-}
-.UCSelected {
-  border: 1px solid grey;
-  background: #203864;
-  color: white;
-  border-radius: 5px;
-  padding: 5px;
-}
-.SB-Info {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-/* Filter bar */
-.filterBar {
-  height: 800px;
-  width: 100%;
-  max-width: 300px;
-
-  background: white;
-  display: grid;
-  grid-gap: 10px;
-}
-.filterBar > div {
-}
-.filter-upper {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-
-  border: 1px solid rgba(128, 128, 128, 0.568);
-}
-.fb-options {
-  height: 350px;
-}
-.fb-options > div {
-  margin-top: 10px;
-}
-.fb-header {
-  height: 50px;
-  text-align: center;
-  line-height: 50px;
-  background-color: var(--color-primary-social);
-  color: white;
-}
-.fb-Option {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding: 0 10px;
-  align-items: center;
-  margin: 5px auto;
-}
-/*filter switches*/
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 45px;
-  height: 17px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 13px;
-  width: 13px;
-  left: 2px;
-  bottom: 2px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-input:checked + .slider {
-  background-color: #2196f3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196f3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-@media only screen and (max-width: 768px) {
-  .MainGrid {
-    grid-template-columns: 1fr;
+@media screen and (max-width: 1224px) {
+  .content.friendsSearch {
+    transform: translateX(0);
+    width: 58vw;
+    left: 35vw;
   }
-  .filterBar {
-    display: none;
-  }
-  .MainContainer {
-    grid-template-columns: 1fr;
-  }
+}
+@media screen and (max-width: 768px) {
+  .content.friendsSearch {
+    width: calc(100vw - 6px);
 
-  .LSidebar,
-  .SideBar {
-    display: none;
-  }
-  .UpperConnect {
-    display: grid;
-    justify-content: center;
-  }
-  .RightUC {
-    min-width: 100px;
-    justify-content: center;
-    font-size: 14px;
-  }
-  .UCList ul {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    padding: 3px;
-  }
-  .UpperConnect {
-    grid-template-columns: 1fr;
-  }
-  .LowerConnect {
-    grid-template-columns: 1fr 1fr;
+    left: 3px;
   }
 }
