--- a/src/projects/socialmedia/Profiles/Profiles.css
+++ b/src/projects/socialmedia/Profiles/Profiles.css
@@ -1,10 +1,63 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap");
+
 .friendsSearch {
-  border: 1px solid crimson;
+  background: whitesmoke;
 }
 .content.friendsSearch {
   top: 80px;
-  width: 40vw;
-  left: calc(50vw + 5vw);
+  width: 58vw;
+  left: calc(50vw + 14vw);
+  padding-top: 0;
+}
+.fr-search-main {
+}
+.fr-search-main h2,
+h3 {
+  font-weight: 700;
+  color: var(--color-secondary-social);
+  margin: 5px 0;
+  padding: 10px;
+}
+.fr-search-grid {
+}
+.fr-request-profile {
+}
+
+.fr-search-main img {
+  width: 95px;
+  height: 95px;
+  border-radius: 50%;
+  border: 1px solid rgba(128, 128, 128, 0.327);
+}
+
+.fr-request {
+  padding: 0 5px;
+  border: 1px solid rgba(128, 128, 128, 0.411);
+  height: 310px;
+  margin: 5px 0;
+}
+.fr-request-list {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+.fr-request-profile {
+  border: 1px solid rgba(128, 128, 128, 0.5);
+  display: flex;
+  height: 250px;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.fr-request-profile h5 {
+  font-weight: 700;
+  color: rgba(0, 0, 0, 0.789);
+}
+.fr-action {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.fr-action button {
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1224px) {
