--- a/src/projects/socialmedia/Nav/NavLeft/components/FriendsPage.css
+++ b/src/projects/socialmedia/Nav/NavLeft/components/FriendsPage.css
@@ -27,13 +27,12 @@
 .fp-navigate > div {
   height: 70px;
   display: flex;
+  align-items: center;
   gap: 25px;
   padding: 15px;
   cursor: pointer;
 }
-.fp-selected {
-  background-color: rgba(128, 128, 128, 0.179);
-}
+
 .fp-navigate > div:hover {
   background-color: rgba(128, 128, 128, 0.179);
 }
