--- a/src/projects/socialmedia/Profiles/Profiles.css
+++ b/src/projects/socialmedia/Profiles/Profiles.css
@@ -10,6 +10,7 @@
   padding-top: 0;
 }
 .fr-search-main {
+  padding-top: 10px;
 }
 .fr-search-main h2,
 h3 {
@@ -19,8 +20,9 @@ h3 {
   padding: 10px;
 }
 .fr-search-grid {
-}
-.fr-request-profile {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
 }
 
 .fr-search-main img {
@@ -33,16 +35,18 @@ h3 {
 .fr-request {
   padding: 0 5px;
   border: 1px solid rgba(128, 128, 128, 0.411);
-  height: 310px;
+  min-height: 310px;
   margin: 5px 0;
 }
 .fr-request-list {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
 }
 .fr-request-profile {
   border: 1px solid rgba(128, 128, 128, 0.5);
   display: flex;
+
   height: 250px;
   flex-direction: column;
   justify-content: space-evenly;
@@ -53,10 +57,15 @@ h3 {
   color: rgba(0, 0, 0, 0.789);
 }
 .fr-action {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  gap: 10px;
 }
 .fr-action button {
+  width: 100%;
+  min-width: 4rem;
+  max-width: 10rem;
+  font-size: 12px;
+  padding: 10px;
   cursor: pointer;
 }
 
@@ -66,11 +75,19 @@ h3 {
     width: 58vw;
     left: 35vw;
   }
+  .fr-request-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 @media screen and (max-width: 768px) {
   .content.friendsSearch {
     width: calc(100vw - 6px);
 
     left: 3px;
+  }
+  .fr-request-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
