--- a/src/projects/socialmedia/Nav/NavTop/NavTop.css
+++ b/src/projects/socialmedia/Nav/NavTop/NavTop.css
@@ -210,6 +210,23 @@ a {
   margin: 1px auto;
   cursor: pointer;
 }
+.notifications-icon {
+  position: relative;
+}
+.notification-count {
+  position: absolute;
+  color: white;
+  font-size: 12px;
+  font-weight: 700;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  text-align: center;
+  padding: 5px;
+  left: 50%;
+  top: 0;
+  background-color: crimson;
+}
 @media screen and (max-width: 1224px) {
   .social-nav-top h5 {
     display: none;
@@ -224,6 +241,14 @@ a {
     display: grid;
     grid-template-columns: 1fr;
     height: auto;
+    align-items: center;
+  }
+  .logo {
+    margin: 0 auto;
+    width: 100%;
+  }
+  .fab.fa-pied-piper-alt.fa-2x.sm-icon {
+    display: none;
   }
   .social-nav-top ul {
     background-color: whitesmoke;
@@ -254,9 +279,9 @@ a {
 }
 .trending:hover {
   /* Start the shake animation and make the animation last for 0.5 seconds */
-  animation: shake 0.5s;
+  /* animation: shake 1s;
 
-  animation-iteration-count: infinite;
+  animation-iteration-count: infinite; */
 }
 
 @keyframes shake {
@@ -264,33 +289,33 @@ a {
     transform: translate(1px, 1px) rotate(0deg);
   }
   10% {
-    transform: translate(-1px, -2px) rotate(-1deg);
+    transform: translate(-1px, -2px) rotate(-0.5deg);
   }
   20% {
-    transform: translate(-3px, 0px) rotate(1deg);
+    transform: translate(-3px, 0px) rotate(0.5deg);
   }
   30% {
     transform: translate(3px, 2px) rotate(0deg);
   }
   40% {
-    transform: translate(1px, -1px) rotate(1deg);
+    transform: translate(1px, -1px) rotate(0.5deg);
   }
   50% {
-    transform: translate(-1px, 2px) rotate(-1deg);
+    transform: translate(-1px, 2px) rotate(-0.5deg);
   }
   60% {
     transform: translate(-3px, 1px) rotate(0deg);
   }
   70% {
-    transform: translate(3px, 1px) rotate(-1deg);
+    transform: translate(3px, 1px) rotate(-0.5deg);
   }
   80% {
-    transform: translate(-1px, -1px) rotate(1deg);
+    transform: translate(-1px, -1px) rotate(0.5deg);
   }
   90% {
     transform: translate(1px, 2px) rotate(0deg);
   }
   100% {
-    transform: translate(1px, -2px) rotate(-1deg);
+    transform: translate(1px, -2px) rotate(-0.5deg);
   }
 }
