--- a/src/projects/socialmedia/Profiles/Profiles.css
+++ b/src/projects/socialmedia/Profiles/Profiles.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap");
 
 .friendsSearch {
-  background: whitesmoke;
+  background: rgba(236, 228, 228, 0.763);
+  padding: 0 2px;
 }
 .content.friendsSearch {
   top: 80px;
