--- a/src/projects/socialmedia/Nav/NavTop/NavTop.css
+++ b/src/projects/socialmedia/Nav/NavTop/NavTop.css
@@ -1,20 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&family=Roboto:wght@100;400;700;900&display=swap");
-.social-nav-top {
+.nav-bar-top {
   position: fixed;
   top: 0;
   height: 60px;
   width: 100%;
-
   z-index: 5;
   background: var(--color-primary-social);
+}
+
+.social-nav-top {
+  height: 100%;
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 0px 20px;
   font-family: "Poppins", sans-serif;
   font-family: "Roboto", sans-serif;
   transition: all 300ms smooth;
-  border-bottom: 1px solid rgba(128, 128, 128, 0.385);
+  /* border-bottom: 1px solid rgba(128, 128, 128, 0.385); */
 }
 
 .logo {
