--- a/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
+++ b/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
@@ -10,52 +10,10 @@
   left: 50%;
   color: black;
 }
-.profile-page-upper {
-  background: white;
-  position: relative;
-  grid-template-columns: 4fr 3fr;
-}
-.profile-page-upper-top {
-  position: relative;
-  background: var(--color-primary-social);
-  height: 200px;
-  display: grid;
-  grid-template-columns: 1fr;
-}
-
-.profile-page-upper-bottom {
-  background: var(--color-secondary-social);
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  padding-bottom: 10px;
-  align-items: center;
-  width: 100%;
-  height: 150px;
-}
-.profile-page-upper-top-status {
-  padding: 5px;
-  display: flex;
-  justify-content: flex-start;
-
-  color: rgb(12, 175, 12);
-}
-.profile-page-upper-top-name {
-  padding: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  padding-right: 20px;
-}
-.profile-page-upper-top-status {
-  display: flex;
-  justify-content: flex-start;
-}
 
 .profile-page-upper-new {
   display: grid;
-  grid-template-rows: 2fr 1fr;
+  grid-template-rows: 1fr;
   border-radius: 10px;
 }
 .profile-page-upper-top-new {
@@ -64,6 +22,8 @@
   padding: 3px;
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 400px;
 }
 
 .profile-page-upper-top-new img {
@@ -74,7 +34,7 @@
 }
 .profile-page-upper-bottom-new {
   display: grid;
-  grid-template-columns: 3fr 2fr;
+  grid-template-columns: 1fr;
 }
 
 .profile-page-info {
@@ -83,9 +43,9 @@
   justify-content: center;
   align-items: center;
   padding: 5px 10px;
-  background-color: var(--color-primary-social);
-  color: white;
-  font-family: "Noto Serif", serif;
+  background-color: rgba(236, 228, 228, 0.763);
+  color: var(--color-secondary-social);
+  border: 1px solid rgba(128, 128, 128, 0.327);
   line-height: 1.6em;
   gap: 25px;
 }
@@ -119,11 +79,13 @@
 }
 
 .profile-page-buttons {
-  background-color: var(--color-secondary-social);
+  background: rgba(236, 228, 228, 0.763);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   gap: 0px;
+
+  width: 50%;
 }
 
 .profile-page-upper-image {
@@ -168,13 +130,20 @@
 }
 
 .profile-page-lower-buttons {
+  width: 50%;
   background-color: rgba(128, 128, 128, 0.106);
   margin: 10px 0;
   display: flex;
   justify-content: space-evenly;
-  padding: 10px 0;
+  padding: 20px 0 0;
   border-radius: 5px;
   border: 1px solid rgba(128, 128, 128, 0.39);
+  color: var(--color-secondary-social);
+  font-size: 14px;
+  font-weight: 500;
+}
+.profile-page-lower-buttons h3 {
+  color: var(--color-secondary-social);
 }
 .profile-page-lower-btn {
   width: 8rem;
@@ -182,6 +151,7 @@
 .profile-page-lower-btn > button {
   width: 80%;
   cursor: pointer;
+  background-color: var(--color-secondary-social);
 }
 .profile-page-lower-posts {
   height: 100%;
@@ -320,7 +290,7 @@
     display: grid;
     grid-template-columns: 1fr;
   }
-  .profile-page-buttons {
+  .profile-page-lower-buttons {
     display: none;
   }
 }
