--- a/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
+++ b/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
@@ -17,15 +17,17 @@
   border-radius: 10px;
 }
 .profile-page-upper-top-new {
-  background: url(https://cdn.pixabay.com/photo/2015/06/19/21/24/avenue-815297_960_720.jpg)
-    no-repeat center center/cover;
+  position: relative;
+
   padding: 3px;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 400px;
+  overflow-y: none;
 }
-
+.profile-banner-image {
+}
 .profile-page-upper-top-new img {
   height: 310px;
   width: 310px;
@@ -43,7 +45,7 @@
   justify-content: center;
   align-items: center;
   padding: 5px 10px;
-  background-color: rgba(236, 228, 228, 0.763);
+  background-color: rgba(236, 228, 228, 1);
   color: var(--color-secondary-social);
   border: 1px solid rgba(128, 128, 128, 0.327);
   line-height: 1.6em;
