--- a/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
+++ b/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
@@ -83,7 +83,7 @@
   border-radius: 5px;
   font-size: 21px;
   background-color: none;
-
+  border: 1px solid steelblue;
   color: steelblue;
 }
 .post-feed-action {
