--- a/src/projects/socialmedia/login/Login.css
+++ b/src/projects/socialmedia/login/Login.css
@@ -18,12 +18,13 @@
   justify-content: space-around;
   flex-direction: column;
   align-items: center;
+
   background-color: var(--color-primary-social);
   padding: 100px 0;
 }
 
 .main-login-form input {
-  width: 20rem;
+  width: 100%;
   height: 2rem;
   padding: 5px;
   border-radius: 5px;
@@ -45,7 +46,7 @@
   background-color: var(--color-secondary-social);
 }
 .main-login-picture i {
-  font-size: 208px;
+  font-size: 158px;
 }
 .main-login h1 {
   color: white;
@@ -55,8 +56,13 @@
   .main-login {
     grid-template-columns: 1fr;
     grid-template-rows: 4fr 1fr;
+    height: 600px;
   }
   .main-login-form {
     padding: 10px;
+  }
+  .main-login-picture i {
+    font-size: 100px;
+    padding: 25px 0;
   }
 }
