--- a/src/projects/socialmedia/Nav/NavTop/NavTop.css
+++ b/src/projects/socialmedia/Nav/NavTop/NavTop.css
@@ -23,7 +23,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
 
   width: 25rem;
 }
@@ -55,7 +54,7 @@
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
-.logo input {
+/* .logo input {
   height: 2.5rem;
   width: 100%;
   min-width: 12rem;
@@ -64,11 +63,20 @@
   border: none;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
-}
+} */
 .top-nav-img {
   width: 35px;
   height: 35px;
   border-radius: 50%;
+}
+.nav-top-sb1 {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+}
+.fa.fa-search i {
+  color: var(--color-secondary-social) !important;
 }
 .social-nav-top ul {
   width: 40%;
@@ -156,7 +164,8 @@ a {
 .notification:hover {
   background: rgba(128, 128, 128, 0.132);
 }
-.notification img {
+.notification img,
+.nav-top-sb1 img {
   width: 45px;
   height: 45px;
   border-radius: 50%;
@@ -236,6 +245,9 @@ a {
   }
   .social-nav-top {
   }
+  .logo {
+    display: none;
+  }
 }
 @media screen and (max-width: 600px) {
   .social-nav-top {
@@ -248,10 +260,7 @@ a {
     height: auto;
     align-items: center;
   }
-  .logo {
-    margin: 0 auto;
-    width: 100%;
-  }
+
   .fab.fa-pied-piper-alt.fa-2x.sm-icon {
     display: none;
   }
