--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,4 +1,4 @@
-nav {
+.main-nav {
   background-color: rgba(0, 0, 0, 0.329);
 
   padding: 0.7rem 1.7rem;
@@ -11,6 +11,7 @@ nav {
 
   bottom: 2rem;
   display: flex;
+
   justify-content: space-around;
   align-items: center;
   border-radius: 5px;
