--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -26,8 +26,12 @@
   letter-spacing: 1.5px;
   padding: 2px;
 }
-.portfolio_info .portfolio_item.social-media-project img {
+.portfolio_image {
+  padding: 20px;
+  min-height: 300px;
+  /* background-color: steelblue; */
 }
+
 .portfolio_links {
   display: flex;
   margin: 10px auto;
