--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -26,6 +26,9 @@
   letter-spacing: 1.5px;
   padding: 2px;
 }
+.portfolio_info h3 {
+  text-transform: uppercase;
+}
 .portfolio_image {
   padding: 20px;
   min-height: 300px;
