--- a/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
+++ b/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
@@ -32,8 +32,10 @@
   display: flex;
   flex-direction: column;
   gap: 0;
+  /* border: 3px solid crimson; */
 }
-.postFeed-post-info-stamp h3 {
+.postFeed-post-info-stamp h3,
+.postFeed-post-info-stamp h4 {
   color: var(--color-secondary-social);
   font-weight: bold;
 }
