--- a/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
+++ b/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
@@ -18,6 +18,8 @@
   display: flex;
   gap: 2rem;
   align-items: center;
+  padding-bottom: 2px;
+  border-bottom: 2px solid rgba(70, 131, 180, 0.35);
 }
 .postFeed-post-info img {
   width: 60px;
@@ -71,6 +73,9 @@
   color: var(--color-secondary-social);
   letter-spacing: 1px;
   cursor: pointer;
+}
+.pfp-p {
+  margin: 0;
 }
 .post-feed-action {
   display: flex;
