--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,13 +9,21 @@ header {
   height: 100%;
   position: relative;
 }
+.header_container h1 {
+  font-size: 50px;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
 /******CTA****/
 .cta {
   margin-top: 2.5rem;
   display: flex;
   gap: 1.2rem;
   justify-content: center;
+  font-size: 20px;
+  letter-spacing: 1.5px;
 }
+
 /******Socials****/
 .header_socials {
   display: flex;
@@ -60,6 +68,27 @@ header {
   font-weight: 200;
   font-size: 0.9rem;
 }
+.line-1 {
+  position: relative;
+
+  margin: 0 auto;
+
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.anim-typewriter {
+  animation: typewriter 4s steps(44) 1s 1 normal both;
+  /* blinkTextCursor 500ms steps(44) infinite normal; */
+}
+@keyframes typewriter {
+  from {
+    width: 0;
+  }
+  to {
+    width: 24rem;
+  }
+}
 
 /*queries*/
 @media screen and (max-width: 1024px) {
@@ -76,5 +105,8 @@ header {
   .header_socials,
   .scroll_down {
     display: none;
+  }
+  .cta {
+    font-size: 16px;
   }
 }
