--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ html {
 
 :root {
   /* --color-bg: #1f1f38; */
-  --color-bg: #080f0f;
+  --color-bg: #080f0fb6;
   /* --color-bg-variant: #2c2c6c; */
   --color-bg-variant: #36486b;
   --color-primary: #4db5ff;
@@ -118,7 +118,18 @@ img {
   width: 100%;
   object-fit: cover;
 }
-
+.homepage-overlay {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+  z-index: -1;
+}
+.homepage-overlay img {
+  width: 100%;
+  height: 100%;
+}
 /*--Media Queries for medium devices */
 @media screen and (max-width: 1024px) {
   .container {
