--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,3 +1,27 @@
 #about {
-  height: 40vh;
+  width: 75%;
+  height: 35vh;
+  border: 1px solid grey;
+  margin: 10px auto;
+  text-align: center;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#about h1 {
+  font-size: 28px;
+  margin: 10px auto;
+  font-weight: 700;
+}
+#about p {
+  font-size: 20px;
+  padding: 10px;
+  line-height: 1.6em;
+  letter-spacing: 1.5px;
+}
+@media screen and (max-width: 1024px) {
+  #about {
+    width: 87%;
+  }
 }
