--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -7,8 +7,10 @@
   gap: 2.5rem;
 }
 .container h2 {
+  margin-top: 20px;
+  font-size: 34px;
   font-weight: 700;
-  letter-spacing: 3px;
+  letter-spacing: 3.5px;
 }
 .portfolio_item {
   background: var(--color-bg-variant);
