--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,6 +1,6 @@
 #about {
   width: 75%;
-  height: 35vh;
+  height: auto;
   border: 1px solid grey;
   margin: 10px auto;
   text-align: center;
@@ -8,6 +8,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-bottom: 150px;
+  padding: 40px 15px;
 }
 #about h1 {
   font-size: 28px;
@@ -23,5 +25,8 @@
 @media screen and (max-width: 1024px) {
   #about {
     width: 87%;
+  }
+  #about p {
+    font-size: 18px;
   }
 }
