--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -19,6 +19,11 @@
   border: 1px solid transparent;
   transition: var(--transition);
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+article > div {
 }
 .portfolio_info {
   display: flex;
@@ -27,17 +32,19 @@
   line-height: 1.6em;
   letter-spacing: 1.5px;
   padding: 2px;
+  height: 175px;
 }
 .portfolio_info h3 {
   text-transform: uppercase;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.63);
 }
 .portfolio_image {
   padding: 20px;
-  min-height: 300px;
+
   /* background-color: steelblue; */
 }
 .portfolio_image img {
-  width: 100%;
+  width: auto;
 }
 .portfolio_links {
   display: flex;
@@ -54,6 +61,9 @@
 .spacing {
   display: flex;
   gap: 5px;
+}
+#e28743 {
+  background-color: #e28743;
 }
 /* .social-media-project {
   background: var(--color-primary-social);
