--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -36,19 +36,25 @@
   text-align: left;
 }
 #contact input {
-  width: 80%;
+  width: 70%;
   height: 3.5rem;
-  padding: 5px;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 18px;
+  text-align: center;
 }
 #contact textarea {
   width: 100%;
   height: 13rem;
   margin-bottom: 10px;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 5px;
 }
 #contact button {
   width: 80%;
   height: 3rem;
-  font-size: 18px;
+  font-size: 20px;
   border: none;
   cursor: pointer;
 }
