--- a/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
+++ b/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
@@ -3,7 +3,7 @@
 .profile-page-main {
   position: relative;
   width: 100%;
-  max-width: 1300px;
+  max-width: 1150px;
   padding-top: 40px;
   top: 0;
   transform: translateX(-50%);
@@ -133,17 +133,24 @@
   left: calc(44vw);
   top: calc(28vh);
 }
-
+.profile-page-lower-options {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+  /* border: 2px solid crimson; */
+}
 .profile-page-lower-buttons {
-  width: 50%;
+  width: 100%;
   background-color: rgba(128, 128, 128, 0.106);
+  background-color: aliceblue;
   margin: 10px 0;
   display: flex;
   justify-content: space-evenly;
   padding: 20px 0 0;
   border-radius: 5px;
   border: 1px solid rgba(128, 128, 128, 0.39);
-  color: var(--color-secondary-social);
+  color: var(--color-primary-social);
   font-size: 13px;
   font-weight: 500;
 }
