--- a/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
+++ b/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
@@ -14,18 +14,37 @@
 .postFeed-post:hover {
   background-color: rgba(128, 128, 128, 0.106);
 }
-.postFeed-post-info {
-  display: flex;
-  gap: 2rem;
-  align-items: center;
-  padding-bottom: 2px;
+
+.postFeed-post-info2 {
+  display: grid;
+  grid-template-columns: 1fr 8fr;
   border-bottom: 2px solid rgba(70, 131, 180, 0.35);
 }
-.postFeed-post-info img {
-  width: 60px;
-  height: 60px;
+.postFeed-post-image2 {
+  /* border: 1px solid crimson; */
+  display: flex;
+  align-items: center;
+}
+.postFeed-post-image2 img {
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  cursor: pointer;
+}
+.postFeed-post-published {
+  display: flex;
+  justify-content: space-between;
+}
+.postFeed-post-published-information h3 {
+  margin-bottom: -10px;
+}
+.postFeed-post-published-information h5 {
+  padding-left: 10px;
+}
+.postFeed-post-published-actions {
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  color: var(--color-secondary-social);
 }
 .postFeed-post-image :hover {
   opacity: 0.96;
