--- a/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
+++ b/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
@@ -45,6 +45,7 @@
   align-items: center;
   padding: 5px;
   color: var(--color-secondary-social);
+  cursor: pointer;
 }
 .postFeed-post-image :hover {
   opacity: 0.96;
@@ -73,8 +74,10 @@
 .postFeed-post-stats {
   display: flex;
   justify-content: center;
+  /* border: 1px solid red; */
+  /* height: 3.5rem; */
   gap: 4rem;
-  padding: 15px 0;
+  padding: 0;
 }
 .postFeed-post-stats > div {
   display: flex;
@@ -85,13 +88,16 @@
 }
 
 .postFeed-post-stats i {
-  font-size: 20px;
+  font-size: 18px;
   cursor: pointer;
 }
 .postFeed-post-text {
   color: var(--color-secondary-social);
   letter-spacing: 1px;
   cursor: pointer;
+  /* border: 1px solid rgba(70, 131, 180, 0.45);
+  border-radius: 5px;
+  padding: 5px 2px; */
 }
 .pfp-p {
   margin: 0;
