--- a/src/projects/socialmedia/main/components/PostPage/PostPage.css
+++ b/src/projects/socialmedia/main/components/PostPage/PostPage.css
@@ -218,17 +218,19 @@
 @media screen and (max-width: 909px) {
   .PostPage {
     margin-top: -0px;
-    max-height: 100vh;
+    height: 100vh;
     overflow-y: hidden;
   }
 
   .PostCard {
-    height: 100%;
+    height: 99vh;
     margin-top: 0;
   }
   .PostCard-Post {
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 2fr 3fr;
+
+    overflow-y: hidden;
   }
   .PostCard-closeBtn {
     display: flex;
@@ -246,11 +248,16 @@
     display: none;
   }
   .PostCard-Post-details {
-    height: 430px;
+    /* height: 430px; */
     overflow-y: scroll;
+    height: 100%;
+  }
+  .PostCard-Post-details h3,
+  .PostCard-Post-details h5 {
+    margin: 2px;
   }
   .PostCard-Post-image img {
-    height: 430px;
+    height: 100%;
   }
   .sm-l {
     font-size: 32px;
@@ -269,7 +276,9 @@
     transform: translate(-50%, -50%);
   }
   .PostCard-Post-details-post-comments {
-    height: 250px;
+    height: 150px;
     overflow-y: scroll;
+
+    background-color: rgba(240, 248, 255, 0.425);
   }
 }
